--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ __pycache__/
 
 #CSV files storing case information
 \docs
+\results
+Rejected_Report.xlsx
+Accepted_Report.xlsx
 
 # vscode
 /.vscode
